--- a/Develop/style.css
+++ b/Develop/style.css
@@ -23,3 +23,31 @@ h2{
 input{
     text-align: center;
 }
+
+.container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 80rem;
+    margin: 0 auto;
+}
+
+button {
+    display: inline-block;
+    font-family: sans-serif;
+    background-color: #52bca9;
+    border-radius: 10px;
+    border: 3px double #c09f9f;
+    color: #eeeeee;
+    text-align: center;
+    font-size: 15px;
+    padding: 20px;
+    width: 200px;
+    margin-top: 3px;
+  }
+
+  button:hover{
+      box-shadow: 4px 3px 6px #52bca9;
+  }
