--- a/Develop/style.css
+++ b/Develop/style.css
@@ -50,3 +50,32 @@ input{
   button:hover{
       box-shadow: 4px 3px 6px #52bca9;
   }
+
+  #startQuiz{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+#timer{
+    font-family:'Times New Roman', Times, serif;
+    background-color: #ae86b5;
+    color: #52bca9;
+    font-size: larger;
+    text-align: center;
+}
+
+#quiz {
+    display: none;
+}
+
+#results {
+    display: none;
+}
+
+#gameOver {
+    text-align: center;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+}
