--- a/Develop/style.css
+++ b/Develop/style.css
@@ -79,3 +79,20 @@ input{
     flex-direction: column;
     align-items: center;
 }
+
+#highScore{
+ height: 1.5rem;
+ border:groove 2px;
+}
+
+#high-score{
+    display: none;
+    width: 50%;
+    border: solid;
+    border-color: #52bca9;
+    border-bottom-style: groove;
+    padding-bottom: .3rem;
+    background: aquamarine;
+}
+
+
